# chart-gen

./: .dockerignore  .env.template  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
images/logo/: ChartGen Logo AD.afdesign
outputs/: info.txt
src/ui/: chart_ui.py
src/util/: chart_util.py  log_util.py
