[tool.poetry]
name = "chartgen"
version = "1.0.0"
description = "Generate charts using OpenAI Code Interpreter"
authors = ["Sumit Sahoo <sumitsahoo1988@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
openai = "^1.50.2"
gradio = "^4.44.0"
rich = "^13.8.1"
setuptools = "^68.2.2"

# Add venv directory information for Zed code editor
[tool.pyright]
venvPath = "."
venv = ".venv"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
